# hush-windows

./: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json  tailwind.config.ts
.cargo/: config.toml
.github/workflows/: release.yml
src/: App.tsx  app.rs  audio.rs  history.rs  hotkey.rs  injector.rs  main.rs  polisher.rs  transcriber.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth.rs  commands.rs  context.rs  hotkey.rs  injector.rs  lib.rs  main.rs  state.rs  transcriber.rs
src/components/: Waveform.tsx
src/lib/: events.ts  tauri.ts
src/styles/: globals.css
src/ui/: bubble.rs  mod.rs  settings.rs  tray.rs
src/windows/: Bubble.tsx  History.tsx  Onboarding.tsx  Settings.tsx
