[package]
name = "hush-windows"
version = "0.1.0"
edition = "2021"
description = "System-wide voice dictation for Windows — on-device Whisper + optional AI polish"
authors = ["Abhishekcs194"]

[[bin]]
name = "hush-windows"
path = "src/main.rs"

[dependencies]
# Audio capture — WASAPI backend on Windows
cpal = "0.15"

# On-device Whisper inference via whisper.cpp
whisper-rs = "0.11"

# Global hotkey registration (RegisterHotKey + WM_HOTKEY)
global-hotkey = "0.5"

# UI framework: egui with multi-viewport (bubble + settings as separate windows)
eframe = { version = "0.28", features = ["wgpu", "default_fonts", "wayland", "x11"] }
egui = "0.28"

# System tray (Shell_NotifyIcon wrapper)
tray-icon = "0.14"

# Text injection
enigo = "0.2"

# Cross-platform clipboard
arboard = "3"

# Windows API: foreground window, SendInput, Credential Manager
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_DataExchange",
    "Win32_Security_Credentials",
    "Win32_UI_Accessibility",
] }

# HTTP client for Groq API
reqwest = { version = "0.12", features = ["json"] }

# Async runtime for Whisper tasks and API calls
tokio = { version = "1", features = ["full"] }

# Credential storage (wraps Windows Credential Manager)
keyring = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"
dirs = "5"
image = { version = "0.25", default-features = false, features = ["png"] }

[build-dependencies]
# Embeds app icon and sets Windows subsystem on release builds
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
strip = true
