[package]
name = "hush-windows"
version = "0.1.0"
edition = "2021"
description = "System-wide voice dictation for Windows"

[lib]
name = "hush_windows_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-shell = "2"

# Audio capture — WASAPI on Windows
cpal = "0.15"

# Text injection
enigo = "0.2"

# Clipboard
arboard = "3"

# Open browser for auth
open = "5"

# Windows API
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_DataExchange",
    "Win32_Security_Credentials",
    "Win32_UI_Accessibility",
] }

# HTTP for Groq API
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Credential storage
keyring = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"
dirs = "5"

[profile.release]
opt-level = 3
lto = true
strip = true
